@@ -1,3 +1,8 @@
+Sat Nov  3 23:38:15 2012  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* complex.c: modified doc.
+	* rational.c: ditto.
+
 Sat Nov  3 22:38:55 2012  Tadayoshi Funaba  <tadf@dotrb.org>
 
 	* ext/date/date_core.c: modified doc.
